更新到 NEXT 官方 b726929 commit 	修改：     languages/en.yml、languages/zh-CN.yml 添加书单和影单 	修改：     layout/_macro/post-collapse.swig 添加分类、归档、tag 	页显示十二生肖

--- a/languages/en.yml
+++ b/languages/en.yml
@@ -6,6 +6,8 @@ title:
 
 menu:
   home: Home
+  booklist: BookList
+  movielist: MovieList
   archives: Archives
   categories: Categories
   tags: Tags
